// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Menu demos > demo: Basic 1`] = `
"<div style="width: 256px;">
  <ul class="ant-menu ant-menu-root ant-menu-inline ant-menu-light" role="menu">
    <!-- Inline mode: expand/collapse in place -->
    <li class="ant-menu-submenu ant-menu-submenu-inline">
      <div class="ant-menu-submenu-title" style="padding-left: 0px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
        <!--v-if--><span class="ant-menu-title-content">Navigation One</span><i class="ant-menu-submenu-arrow"></i>
      </div>
      <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
        <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
          <li class="ant-menu-item-group" role="presentation">
            <div class="ant-menu-item-group-title" role="presentation">Item 1</div>
            <ul class="ant-menu-item-group-list" role="group">
              <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
                <!--v-if--><span class="ant-menu-title-content">Option 1</span>
              </li>
              <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
                <!--v-if--><span class="ant-menu-title-content">Option 2</span>
              </li>
            </ul>
          </li>
          <li class="ant-menu-item-group" role="presentation">
            <div class="ant-menu-item-group-title" role="presentation">Item 2</div>
            <ul class="ant-menu-item-group-list" role="group">
              <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
                <!--v-if--><span class="ant-menu-title-content">Option 3</span>
              </li>
              <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
                <!--v-if--><span class="ant-menu-title-content">Option 4</span>
              </li>
            </ul>
          </li>
        </ul>
      </transition-stub>
    </li><!-- Inline mode: expand/collapse in place -->
    <li class="ant-menu-submenu ant-menu-submenu-inline">
      <div class="ant-menu-submenu-title" style="padding-left: 0px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
        <!--v-if--><span class="ant-menu-title-content">Navigation Two</span><i class="ant-menu-submenu-arrow"></i>
      </div>
      <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
        <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 5</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 6</span>
          </li><!-- Inline mode: expand/collapse in place -->
          <li class="ant-menu-submenu ant-menu-submenu-inline">
            <div class="ant-menu-submenu-title" style="padding-left: 24px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
              <!--v-if--><span class="ant-menu-title-content">Submenu</span><i class="ant-menu-submenu-arrow"></i>
            </div>
            <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
              <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
                <li class="ant-menu-item" style="padding-left: 48px;" role="menuitem" tabindex="0">
                  <!--v-if--><span class="ant-menu-title-content">Option 7</span>
                </li>
                <li class="ant-menu-item" style="padding-left: 48px;" role="menuitem" tabindex="0">
                  <!--v-if--><span class="ant-menu-title-content">Option 8</span>
                </li>
              </ul>
            </transition-stub>
          </li>
        </ul>
      </transition-stub>
    </li><!-- Inline mode: expand/collapse in place -->
    <li class="ant-menu-submenu ant-menu-submenu-inline">
      <div class="ant-menu-submenu-title" style="padding-left: 0px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
        <!--v-if--><span class="ant-menu-title-content">Navigation Three</span><i class="ant-menu-submenu-arrow"></i>
      </div>
      <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
        <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 9</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 10</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 11</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 12</span>
          </li>
        </ul>
      </transition-stub>
    </li>
  </ul>
</div>"
`;

exports[`Menu demos > demo: Horizontal 1`] = `
"<ul class="ant-menu ant-menu-root ant-menu-horizontal ant-menu-light" role="menu">
  <li class="ant-menu-item" role="menuitem" tabindex="0">
    <!--v-if--><span class="ant-menu-title-content">Navigation One</span>
  </li>
  <li class="ant-menu-item" role="menuitem" tabindex="0">
    <!--v-if--><span class="ant-menu-title-content">Navigation Two</span>
  </li><!-- Inline mode: expand/collapse in place -->
  <!-- Popup mode: vertical/horizontal -->
  <li class="ant-menu-submenu ant-menu-submenu-horizontal"><span class="ant-trigger-wrapper"><div class="ant-menu-submenu-title" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true"><!--v-if--><span class="ant-menu-title-content">Navigation Three - Submenu</span><i class="ant-menu-submenu-arrow"></i></div></span>
    <!--teleport start-->
    <transition-stub name="ant-slide-up" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end-->
  </li>
  <li class="ant-menu-item" role="menuitem" tabindex="0">
    <!--v-if--><span class="ant-menu-title-content">{
  "__v_isVNode": true,
  "__v_skip": true,
  "type": "a",
  "props": {
    "href": "https://antdv.com",
    "target": "_blank"
  },
  "key": null,
  "ref": null,
  "scopeId": null,
  "slotScopeIds": null,
  "children": "Navigation Four - Link",
  "component": null,
  "suspense": null,
  "ssContent": null,
  "ssFallback": null,
  "dirs": null,
  "transition": null,
  "el": null,
  "anchor": null,
  "target": null,
  "targetStart": null,
  "targetAnchor": null,
  "staticCount": 0,
  "shapeFlag": 9,
  "patchFlag": 0,
  "dynamicProps": null,
  "dynamicChildren": null,
  "appContext": null,
  "ctx": null
}</span>
  </li>
</ul>"
`;

exports[`Menu demos > demo: InlineCollapsed 1`] = `
"<div style="width: 256px;"><button class="ant-btn ant-btn-solid ant-btn-md" style="margin-bottom: 16px;" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content"><span role="img" aria-label="menu-fold" class="anticon anticon-menu-fold"><svg focusable="false" class="" data-icon="menu-fold" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"></path></svg></span></span>
  </button>
  <ul class="ant-menu ant-menu-root ant-menu-inline ant-menu-dark" role="menu">
    <li class="ant-menu-item" role="menuitem" tabindex="0">
      <!--v-if--><span class="ant-menu-title-content">Option 1</span>
    </li>
    <li class="ant-menu-item" role="menuitem" tabindex="0">
      <!--v-if--><span class="ant-menu-title-content">Option 2</span>
    </li>
    <li class="ant-menu-item" role="menuitem" tabindex="0">
      <!--v-if--><span class="ant-menu-title-content">Option 3</span>
    </li><!-- Inline mode: expand/collapse in place -->
    <li class="ant-menu-submenu ant-menu-submenu-inline">
      <div class="ant-menu-submenu-title" style="padding-left: 0px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
        <!--v-if--><span class="ant-menu-title-content">Navigation One</span><i class="ant-menu-submenu-arrow"></i>
      </div>
      <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
        <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 5</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 6</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 7</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 8</span>
          </li>
        </ul>
      </transition-stub>
    </li><!-- Inline mode: expand/collapse in place -->
    <li class="ant-menu-submenu ant-menu-submenu-inline">
      <div class="ant-menu-submenu-title" style="padding-left: 0px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
        <!--v-if--><span class="ant-menu-title-content">Navigation Two</span><i class="ant-menu-submenu-arrow"></i>
      </div>
      <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
        <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 9</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 10</span>
          </li><!-- Inline mode: expand/collapse in place -->
          <li class="ant-menu-submenu ant-menu-submenu-inline">
            <div class="ant-menu-submenu-title" style="padding-left: 24px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
              <!--v-if--><span class="ant-menu-title-content">Submenu</span><i class="ant-menu-submenu-arrow"></i>
            </div>
            <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
              <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
                <li class="ant-menu-item" style="padding-left: 48px;" role="menuitem" tabindex="0">
                  <!--v-if--><span class="ant-menu-title-content">Option 11</span>
                </li>
                <li class="ant-menu-item" style="padding-left: 48px;" role="menuitem" tabindex="0">
                  <!--v-if--><span class="ant-menu-title-content">Option 12</span>
                </li>
              </ul>
            </transition-stub>
          </li>
        </ul>
      </transition-stub>
    </li>
  </ul>
</div>"
`;

exports[`Menu demos > demo: Items 1`] = `
"<div style="width: 256px;">
  <ul class="ant-menu ant-menu-root ant-menu-inline ant-menu-light" role="menu">
    <!-- Inline mode: expand/collapse in place -->
    <li class="ant-menu-submenu ant-menu-submenu-inline">
      <div class="ant-menu-submenu-title" style="padding-left: 0px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
        <!--v-if--><span class="ant-menu-title-content">Navigation One</span><i class="ant-menu-submenu-arrow"></i>
      </div>
      <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
        <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
          <li class="ant-menu-item-group" role="presentation">
            <div class="ant-menu-item-group-title" role="presentation">Item 1</div>
            <ul class="ant-menu-item-group-list" role="group">
              <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
                <!--v-if--><span class="ant-menu-title-content">Option 1</span>
              </li>
              <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
                <!--v-if--><span class="ant-menu-title-content">Option 2</span>
              </li>
            </ul>
          </li>
          <li class="ant-menu-item-group" role="presentation">
            <div class="ant-menu-item-group-title" role="presentation">Item 2</div>
            <ul class="ant-menu-item-group-list" role="group">
              <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
                <!--v-if--><span class="ant-menu-title-content">Option 3</span>
              </li>
              <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
                <!--v-if--><span class="ant-menu-title-content">Option 4</span>
              </li>
            </ul>
          </li>
        </ul>
      </transition-stub>
    </li><!-- Inline mode: expand/collapse in place -->
    <li class="ant-menu-submenu ant-menu-submenu-inline">
      <div class="ant-menu-submenu-title" style="padding-left: 0px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
        <!--v-if--><span class="ant-menu-title-content">Navigation Two</span><i class="ant-menu-submenu-arrow"></i>
      </div>
      <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
        <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 5</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 6</span>
          </li>
          <li role="separator" class="ant-menu-item-divider"></li><!-- Inline mode: expand/collapse in place -->
          <li class="ant-menu-submenu ant-menu-submenu-inline">
            <div class="ant-menu-submenu-title" style="padding-left: 24px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
              <!--v-if--><span class="ant-menu-title-content">Submenu</span><i class="ant-menu-submenu-arrow"></i>
            </div>
            <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
              <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
                <li class="ant-menu-item" style="padding-left: 48px;" role="menuitem" tabindex="0">
                  <!--v-if--><span class="ant-menu-title-content">Option 7</span>
                </li>
                <li class="ant-menu-item" style="padding-left: 48px;" role="menuitem" tabindex="0">
                  <!--v-if--><span class="ant-menu-title-content">Option 8</span>
                </li>
              </ul>
            </transition-stub>
          </li>
        </ul>
      </transition-stub>
    </li>
  </ul>
</div>"
`;

exports[`Menu demos > demo: Theme 1`] = `
"<div><button type="button" role="switch" aria-checked="true" class="ant-switch ant-switch-checked" checked-children="Dark" un-checked-children="Light">
    <!--v-if-->
    <div class="ant-switch-handle">
      <!--v-if-->
    </div><span class="ant-switch-inner"><span class="ant-switch-inner-checked"></span><span class="ant-switch-inner-unchecked"></span></span>
  </button><br><br>
  <ul class="ant-menu ant-menu-root ant-menu-inline ant-menu-dark" role="menu" style="width: 256px;">
    <li class="ant-menu-item" role="menuitem" tabindex="0">
      <!--v-if--><span class="ant-menu-title-content">Navigation One</span>
    </li>
    <li class="ant-menu-item" role="menuitem" tabindex="0">
      <!--v-if--><span class="ant-menu-title-content">Navigation Two</span>
    </li><!-- Inline mode: expand/collapse in place -->
    <li class="ant-menu-submenu ant-menu-submenu-inline">
      <div class="ant-menu-submenu-title" style="padding-left: 0px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
        <!--v-if--><span class="ant-menu-title-content">Navigation Three</span><i class="ant-menu-submenu-arrow"></i>
      </div>
      <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
        <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 3</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 4</span>
          </li><!-- Inline mode: expand/collapse in place -->
          <li class="ant-menu-submenu ant-menu-submenu-inline">
            <div class="ant-menu-submenu-title" style="padding-left: 24px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
              <!--v-if--><span class="ant-menu-title-content">Submenu</span><i class="ant-menu-submenu-arrow"></i>
            </div>
            <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
              <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
                <li class="ant-menu-item" style="padding-left: 48px;" role="menuitem" tabindex="0">
                  <!--v-if--><span class="ant-menu-title-content">Option 5</span>
                </li>
                <li class="ant-menu-item" style="padding-left: 48px;" role="menuitem" tabindex="0">
                  <!--v-if--><span class="ant-menu-title-content">Option 6</span>
                </li>
              </ul>
            </transition-stub>
          </li>
        </ul>
      </transition-stub>
    </li><!-- Inline mode: expand/collapse in place -->
    <li class="ant-menu-submenu ant-menu-submenu-inline">
      <div class="ant-menu-submenu-title" style="padding-left: 0px;" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true">
        <!--v-if--><span class="ant-menu-title-content">Navigation Four</span><i class="ant-menu-submenu-arrow"></i>
      </div>
      <transition-stub name="ant-motion-collapse" appear="false" persisted="true" css="true">
        <ul class="ant-menu ant-menu-sub ant-menu-inline" role="menu" style="display: none;">
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 7</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 8</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 9</span>
          </li>
          <li class="ant-menu-item" style="padding-left: 24px;" role="menuitem" tabindex="0">
            <!--v-if--><span class="ant-menu-title-content">Option 10</span>
          </li>
        </ul>
      </transition-stub>
    </li>
  </ul>
</div>"
`;

exports[`Menu demos > demo: Vertical 1`] = `
"<ul class="ant-menu ant-menu-root ant-menu-vertical ant-menu-light" role="menu" style="width: 256px;">
  <li class="ant-menu-item" role="menuitem" tabindex="0">
    <!--v-if--><span class="ant-menu-title-content">Navigation One</span>
  </li>
  <li class="ant-menu-item" role="menuitem" tabindex="0">
    <!--v-if--><span class="ant-menu-title-content">Navigation Two</span>
  </li><!-- Inline mode: expand/collapse in place -->
  <!-- Popup mode: vertical/horizontal -->
  <li class="ant-menu-submenu ant-menu-submenu-vertical"><span class="ant-trigger-wrapper"><div class="ant-menu-submenu-title" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true"><!--v-if--><span class="ant-menu-title-content">Navigation Three</span><i class="ant-menu-submenu-arrow"></i></div></span>
    <!--teleport start-->
    <transition-stub name="ant-slide-up" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end-->
  </li><!-- Inline mode: expand/collapse in place -->
  <!-- Popup mode: vertical/horizontal -->
  <li class="ant-menu-submenu ant-menu-submenu-vertical"><span class="ant-trigger-wrapper"><div class="ant-menu-submenu-title" role="menuitem" tabindex="0" aria-expanded="false" aria-haspopup="true"><!--v-if--><span class="ant-menu-title-content">Navigation Four</span><i class="ant-menu-submenu-arrow"></i></div></span>
    <!--teleport start-->
    <transition-stub name="ant-slide-up" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end-->
  </li>
</ul>"
`;
